# astrologyengine

./: .env.example  .gitignore  CONTEXT.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
docs/adr/: 0001-dynamic-synastry-flow.md  0002-hermes-agent-integration.md  0003-internal-geocoding.md  0004-flat-tool-signatures.md
src/astroengine/: __init__.py  agent_tools.py  config.py  database.py  main.py  models.py
src/astroengine/api/: natal.py  reading.py  synastry.py  transit.py  users.py
src/astroengine/services/: interpretation.py  natal.py  synastry.py  transit.py
static/: app.js  index.html  manifest.json  style.css  sw.js
