[project]
name = "astroengine"
version = "0.1.0"
description = "Motor de cálculo astrológico con Stellium + Gemini API"
requires-python = ">=3.11"
dependencies = [
    "stellium>=0.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
